[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/BattleOfTurnhout.gd" type="Script" id=1]
[ext_resource path="res://Objects/Turnhout.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Prisoners.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/InfoTurnhout.png" type="Texture" id=6]

[node name="BattleOfTurnhout" type="Spatial"]
script = ExtResource( 1 )

[node name="Turnhout" parent="." instance=ExtResource( 2 )]

[node name="Soldiers" type="Spatial" parent="."]

[node name="Enemies" type="Spatial" parent="."]

[node name="FirstBattalion" type="Spatial" parent="Enemies"]
transform = Transform( -0.630012, 0, -0.776586, 0, 1, 0, 0.776586, 0, -0.630012, 296.12, 1.52588e-05, 226.188 )

[node name="Enemy" parent="Enemies/FirstBattalion" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 4.65027, 2.28882e-05, -6.90552 )

[node name="Enemy2" parent="Enemies/FirstBattalion" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 10.2023, 2.19345e-05, -9.82951 )

[node name="Enemy3" parent="Enemies/FirstBattalion" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -4.55075, 2.28882e-05, -1.39152 )

[node name="Enemy4" parent="Enemies/FirstBattalion" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 1.00226, 2.19345e-05, -4.31551 )

[node name="Enemy5" parent="Enemies/FirstBattalion" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 7.30624, 2.28882e-05, -5.27351 )

[node name="Enemy6" parent="Enemies/FirstBattalion" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 12.8582, 2.19345e-05, -8.19752 )

[node name="Enemy7" parent="Enemies/FirstBattalion" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -1.89374, 2.28882e-05, 0.241486 )

[node name="Enemy8" parent="Enemies/FirstBattalion" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 3.65826, 2.19345e-05, -2.68352 )

[node name="FirstBattalion2" type="Spatial" parent="Enemies"]
transform = Transform( 0.129574, 0, -0.991569, 0, 1, 0, 0.991569, 0, 0.129574, 289.695, 1.52588e-05, 342.393 )

[node name="Enemy" parent="Enemies/FirstBattalion2" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 4.65027, 2.28882e-05, -6.90552 )

[node name="Enemy2" parent="Enemies/FirstBattalion2" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 10.2023, 2.19345e-05, -9.82951 )

[node name="Enemy3" parent="Enemies/FirstBattalion2" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -4.55075, 2.28882e-05, -1.39152 )

[node name="Enemy4" parent="Enemies/FirstBattalion2" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 1.00226, 2.19345e-05, -4.31551 )

[node name="Enemy5" parent="Enemies/FirstBattalion2" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 7.30624, 2.28882e-05, -5.27351 )

[node name="Enemy6" parent="Enemies/FirstBattalion2" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 12.8582, 2.19345e-05, -8.19752 )

[node name="Enemy7" parent="Enemies/FirstBattalion2" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -1.89374, 2.28882e-05, 0.241486 )

[node name="Enemy8" parent="Enemies/FirstBattalion2" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 3.65826, 2.19345e-05, -2.68352 )

[node name="FirstBattalion3" type="Spatial" parent="Enemies"]
transform = Transform( 0.999219, 0, 0.039504, 0, 1, 0, -0.039504, 0, 0.999219, 105.035, 1.14441e-05, 334.832 )

[node name="Enemy" parent="Enemies/FirstBattalion3" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 4.65027, 2.28882e-05, -6.90552 )

[node name="Enemy2" parent="Enemies/FirstBattalion3" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 10.2023, 2.19345e-05, -9.82951 )

[node name="Enemy3" parent="Enemies/FirstBattalion3" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -4.55075, 2.28882e-05, -1.39152 )

[node name="Enemy4" parent="Enemies/FirstBattalion3" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 1.00226, 2.19345e-05, -4.31551 )

[node name="Enemy5" parent="Enemies/FirstBattalion3" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 7.30624, 2.28882e-05, -5.27351 )

[node name="Enemy6" parent="Enemies/FirstBattalion3" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 12.8582, 2.19345e-05, -8.19752 )

[node name="Enemy7" parent="Enemies/FirstBattalion3" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -1.89374, 2.28882e-05, 0.241486 )

[node name="Enemy8" parent="Enemies/FirstBattalion3" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 3.65826, 2.19345e-05, -2.68352 )

[node name="FirstBattalion4" type="Spatial" parent="Enemies"]
transform = Transform( 0.175762, 0, 0.984433, 0, 1, 0, -0.984433, 0, 0.175762, 141.872, 1.14441e-05, 212.658 )

[node name="Enemy" parent="Enemies/FirstBattalion4" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 4.65027, 2.28882e-05, -6.90552 )

[node name="Enemy2" parent="Enemies/FirstBattalion4" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 10.2023, 2.19345e-05, -9.82951 )

[node name="Enemy3" parent="Enemies/FirstBattalion4" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -4.55075, 2.28882e-05, -1.39152 )

[node name="Enemy4" parent="Enemies/FirstBattalion4" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 1.00226, 2.19345e-05, -4.31551 )

[node name="Enemy5" parent="Enemies/FirstBattalion4" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 7.30624, 2.28882e-05, -5.27351 )

[node name="Enemy6" parent="Enemies/FirstBattalion4" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 12.8582, 2.19345e-05, -8.19752 )

[node name="Enemy7" parent="Enemies/FirstBattalion4" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -1.89374, 2.28882e-05, 0.241486 )

[node name="Enemy8" parent="Enemies/FirstBattalion4" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 3.65826, 2.19345e-05, -2.68352 )

[node name="FirstBattalion5" type="Spatial" parent="Enemies"]
transform = Transform( -0.340511, 0, -0.940241, 0, 1, 0, 0.940241, 0, -0.340511, -11.8853, 3.05176e-05, 277.477 )

[node name="Enemy" parent="Enemies/FirstBattalion5" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 4.65027, 2.28882e-05, -6.90552 )

[node name="Enemy2" parent="Enemies/FirstBattalion5" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 10.2023, 2.19345e-05, -9.82951 )

[node name="Enemy3" parent="Enemies/FirstBattalion5" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -4.55075, 2.28882e-05, -1.39152 )

[node name="Enemy4" parent="Enemies/FirstBattalion5" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 1.00226, 2.19345e-05, -4.31551 )

[node name="Enemy5" parent="Enemies/FirstBattalion5" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 7.30624, 2.28882e-05, -5.27351 )

[node name="Enemy6" parent="Enemies/FirstBattalion5" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 12.8582, 2.19345e-05, -8.19752 )

[node name="Enemy7" parent="Enemies/FirstBattalion5" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -1.89374, 2.28882e-05, 0.241486 )

[node name="Enemy8" parent="Enemies/FirstBattalion5" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 3.65826, 2.19345e-05, -2.68352 )

[node name="FirstBattalion6" type="Spatial" parent="Enemies"]
transform = Transform( 0.845308, 0, -0.534279, 0, 1, 0, 0.534279, 0, 0.845308, 15.2485, 3.43323e-05, 315.749 )

[node name="Enemy" parent="Enemies/FirstBattalion6" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 4.65027, 2.28882e-05, -6.90552 )

[node name="Enemy2" parent="Enemies/FirstBattalion6" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 10.2023, 2.19345e-05, -9.82951 )

[node name="Enemy3" parent="Enemies/FirstBattalion6" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -4.55075, 2.28882e-05, -1.39152 )

[node name="Enemy4" parent="Enemies/FirstBattalion6" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 1.00226, 2.19345e-05, -4.31551 )

[node name="Enemy5" parent="Enemies/FirstBattalion6" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 7.30624, 2.28882e-05, -5.27351 )

[node name="Enemy6" parent="Enemies/FirstBattalion6" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 12.8582, 2.19345e-05, -8.19752 )

[node name="Enemy7" parent="Enemies/FirstBattalion6" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -1.89374, 2.28882e-05, 0.241486 )

[node name="Enemy8" parent="Enemies/FirstBattalion6" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 3.65826, 2.19345e-05, -2.68352 )

[node name="FirstBattalion7" type="Spatial" parent="Enemies"]
transform = Transform( 0.0635568, 0, -0.997978, 0, 1, 0, 0.997978, 0, 0.0635568, -111.109, 2.67029e-05, 107.705 )

[node name="Enemy" parent="Enemies/FirstBattalion7" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 4.65027, 2.28882e-05, -6.90552 )

[node name="Enemy2" parent="Enemies/FirstBattalion7" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 10.2023, 2.19345e-05, -9.82951 )

[node name="Enemy3" parent="Enemies/FirstBattalion7" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -4.55075, 2.28882e-05, -1.39152 )

[node name="Enemy4" parent="Enemies/FirstBattalion7" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 1.00226, 2.19345e-05, -4.31551 )

[node name="Enemy5" parent="Enemies/FirstBattalion7" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 7.30624, 2.28882e-05, -5.27351 )

[node name="Enemy6" parent="Enemies/FirstBattalion7" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 12.8582, 2.19345e-05, -8.19752 )

[node name="Enemy7" parent="Enemies/FirstBattalion7" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -1.89374, 2.28882e-05, 0.241486 )

[node name="Enemy8" parent="Enemies/FirstBattalion7" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 3.65826, 2.19345e-05, -2.68352 )

[node name="FirstBattalion8" type="Spatial" parent="Enemies"]
transform = Transform( -0.628805, 0, 0.777563, 0, 1, 0, -0.777563, 0, -0.628805, 19.0641, 3.05176e-05, 15.8034 )

[node name="Enemy" parent="Enemies/FirstBattalion8" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 5.62327, 2.28882e-05, -6.3894 )

[node name="Enemy2" parent="Enemies/FirstBattalion8" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 11.8956, 2.19345e-05, -6.20955 )

[node name="Enemy3" parent="Enemies/FirstBattalion8" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, -5.09971, 2.28882e-05, -6.10533 )

[node name="Enemy4" parent="Enemies/FirstBattalion8" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 1.17349, 2.19345e-05, -5.92501 )

[node name="Enemy5" parent="Enemies/FirstBattalion8" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 7.13526, 2.28882e-05, -3.66332 )

[node name="Enemy6" parent="Enemies/FirstBattalion8" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 13.4076, 2.19345e-05, -3.48353 )

[node name="Enemy7" parent="Enemies/FirstBattalion8" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, -3.5873, 2.28882e-05, -3.37788 )

[node name="Enemy8" parent="Enemies/FirstBattalion8" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 2.68552, 2.19345e-05, -3.19894 )

[node name="FirstBattalion9" type="Spatial" parent="Enemies"]
transform = Transform( -0.997046, 0, 0.0768061, 0, 1, 0, -0.0768061, 0, -0.997046, 141.982, 3.05176e-05, -48.2433 )

[node name="Enemy" parent="Enemies/FirstBattalion9" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 4.65027, 2.28882e-05, -6.90552 )

[node name="Enemy2" parent="Enemies/FirstBattalion9" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 10.2023, 2.19345e-05, -9.82951 )

[node name="Enemy3" parent="Enemies/FirstBattalion9" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -4.55075, 2.28882e-05, -1.39152 )

[node name="Enemy4" parent="Enemies/FirstBattalion9" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 1.00226, 2.19345e-05, -4.31551 )

[node name="Enemy5" parent="Enemies/FirstBattalion9" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 7.30624, 2.28882e-05, -5.27351 )

[node name="Enemy6" parent="Enemies/FirstBattalion9" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 12.8582, 2.19345e-05, -8.19752 )

[node name="Enemy7" parent="Enemies/FirstBattalion9" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -1.89374, 2.28882e-05, 0.241486 )

[node name="Enemy8" parent="Enemies/FirstBattalion9" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 3.65826, 2.19345e-05, -2.68352 )

[node name="FirstBattalion12" type="Spatial" parent="Enemies"]
transform = Transform( 0.111486, 0, 0.993766, 0, 1, 0, -0.993766, 0, 0.111486, 101.548, 3.05176e-05, -34.3634 )

[node name="Enemy" parent="Enemies/FirstBattalion12" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 4.65027, 2.28882e-05, -6.90552 )

[node name="Enemy2" parent="Enemies/FirstBattalion12" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 10.2023, 2.19345e-05, -9.82951 )

[node name="Enemy3" parent="Enemies/FirstBattalion12" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -4.55075, 2.28882e-05, -1.39152 )

[node name="Enemy4" parent="Enemies/FirstBattalion12" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 1.00226, 2.19345e-05, -4.31551 )

[node name="Enemy5" parent="Enemies/FirstBattalion12" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 7.30624, 2.28882e-05, -5.27351 )

[node name="Enemy6" parent="Enemies/FirstBattalion12" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 12.8582, 2.19345e-05, -8.19752 )

[node name="Enemy7" parent="Enemies/FirstBattalion12" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, -1.89374, 2.28882e-05, 0.241486 )

[node name="Enemy8" parent="Enemies/FirstBattalion12" instance=ExtResource( 4 )]
transform = Transform( 0.913418, 0, 0.407024, 0, 1, 0, -0.407024, 0, 0.913418, 3.65826, 2.19345e-05, -2.68352 )

[node name="FirstBattalion10" type="Spatial" parent="Enemies"]
transform = Transform( 0.566794, 0, 0.823859, 0, 1, 0, -0.823859, 0, 0.566794, 175.855, 3.05176e-05, 66.4373 )

[node name="Enemy" parent="Enemies/FirstBattalion10" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 5.62327, 2.28882e-05, -6.3894 )

[node name="Enemy2" parent="Enemies/FirstBattalion10" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 11.8956, 2.19345e-05, -6.20955 )

[node name="Enemy3" parent="Enemies/FirstBattalion10" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, -5.09971, 2.28882e-05, -6.10533 )

[node name="Enemy4" parent="Enemies/FirstBattalion10" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 1.17349, 2.19345e-05, -5.92501 )

[node name="Enemy5" parent="Enemies/FirstBattalion10" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 7.13526, 2.28882e-05, -3.66332 )

[node name="Enemy6" parent="Enemies/FirstBattalion10" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 13.4076, 2.19345e-05, -3.48353 )

[node name="Enemy7" parent="Enemies/FirstBattalion10" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, -3.5873, 2.28882e-05, -3.37788 )

[node name="Enemy8" parent="Enemies/FirstBattalion10" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 2.68552, 2.19345e-05, -3.19894 )

[node name="FirstBattalion11" type="Spatial" parent="Enemies"]
transform = Transform( 0.603723, 0, 0.797194, 0, 1, 0, -0.797194, 0, 0.603723, 143.834, 4.57764e-05, 131.017 )

[node name="Enemy" parent="Enemies/FirstBattalion11" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 5.62327, 2.28882e-05, -6.3894 )

[node name="Enemy2" parent="Enemies/FirstBattalion11" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 11.8956, 2.19345e-05, -6.20955 )

[node name="Enemy3" parent="Enemies/FirstBattalion11" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, -5.09971, 2.28882e-05, -6.10533 )

[node name="Enemy4" parent="Enemies/FirstBattalion11" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 1.17349, 2.19345e-05, -5.92501 )

[node name="Enemy5" parent="Enemies/FirstBattalion11" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 7.13526, 2.28882e-05, -3.66332 )

[node name="Enemy6" parent="Enemies/FirstBattalion11" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 13.4076, 2.19345e-05, -3.48353 )

[node name="Enemy7" parent="Enemies/FirstBattalion11" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, -3.5873, 2.28882e-05, -3.37788 )

[node name="Enemy8" parent="Enemies/FirstBattalion11" instance=ExtResource( 4 )]
transform = Transform( 0.995566, 0, -0.0940734, 0, 1, 0, 0.0940734, 0, 0.995566, 2.68552, 2.19345e-05, -3.19894 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.0204884, 0, 0.99979, 0, 1, 0, -0.99979, 0, 0.0204884, 472.102, 0, 319.047 )
soldiers_path = NodePath("../Soldiers")

[node name="Info" parent="Player/UI" index="5"]
texture = ExtResource( 6 )

[node name="Prisoners" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.105067, 0, -0.994465, 0, 1, 0, 0.994465, 0, 0.105067, 177.765, 0.0716538, 186.908 )
soldiers_path = NodePath("../Soldiers")
player_path = NodePath("../Player")
navigation_path = NodePath("../Turnhout")

[node name="Prisoners2" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.105067, 0, -0.994465, 0, 1, 0, 0.994465, 0, 0.105067, 95.5199, -3.05176e-05, 400.781 )
soldiers_path = NodePath("../Soldiers")
player_path = NodePath("../Player")
navigation_path = NodePath("../Turnhout")

[node name="Prisoners3" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -57.551, 0, 146.969 )
soldiers_path = NodePath("../Soldiers")
player_path = NodePath("../Player")
navigation_path = NodePath("../Turnhout")

[node name="Prisoners4" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 90.24, 0, 10.59 )
soldiers_path = NodePath("../Soldiers")
player_path = NodePath("../Player")
navigation_path = NodePath("../Turnhout")

[node name="Prisoners5" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -57.6536, 3.8147e-06, 314.562 )
soldiers_path = NodePath("../Soldiers")
player_path = NodePath("../Player")
navigation_path = NodePath("../Turnhout")

[node name="Prisoners6" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.362687, -0.0893984, 0.927613, 0.032554, 0.995996, 0.0832605, -0.931342, 0, 0.364145, 229.234, 1.16463, 115.022 )
soldiers_path = NodePath("../Soldiers")
player_path = NodePath("../Player")
navigation_path = NodePath("../Turnhout")

[node name="Prisoners7" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.360856, -0.134107, 0.922929, 0.0488346, 0.990966, 0.1249, -0.931342, 0, 0.364145, 42.0009, 0.519233, 213.078 )
soldiers_path = NodePath("../Soldiers")
player_path = NodePath("../Player")
navigation_path = NodePath("../Turnhout")

[node name="Prisoners8" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.361086, -0.129349, 0.923518, 0.047102, 0.991599, 0.120469, -0.931342, 0, 0.364145, 266.599, 1.01419, 304.518 )
soldiers_path = NodePath("../Soldiers")
player_path = NodePath("../Player")
navigation_path = NodePath("../Turnhout")

[node name="countEnemies" type="Timer" parent="."]
autostart = true

[node name="wintimer" type="Timer" parent="."]
wait_time = 4.0

[node name="TimeGameMode" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -124.0
margin_top = 20.0
margin_right = 124.0
margin_bottom = 281.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerDisplay" type="Label" parent="TimeGameMode"]
margin_right = 248.0
margin_bottom = 26.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="TimeGameMode"]
margin_top = 36.0
margin_right = 248.0
margin_bottom = 62.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeGameTimer" type="Timer" parent="TimeGameMode"]
autostart = true

[connection signal="timeout" from="countEnemies" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="wintimer" to="." method="_on_wintimer_timeout"]
[connection signal="timeout" from="TimeGameMode/TimeGameTimer" to="." method="_on_TimeGameTimer_timeout"]

[editable path="Player"]
[editable path="Player/BelgVisual"]
